fix(c/editor): align components in ticket reply editor (#8505)
* fix(c/editor): align components in ticket reply editor

* fix(c/editor): adjusted alignments

- fixed macros reply editor
- fixed blinking when toggling macros in ticket view

* chore: fix lint

--- a/src/pages/tickets/detail/components/ReplyArea/MessageSourceFields/MessageSourceFields.less
+++ b/src/pages/tickets/detail/components/ReplyArea/MessageSourceFields/MessageSourceFields.less
@@ -16,7 +16,7 @@
         }
 
         .label {
-            min-width: 2.85rem;
+            min-width: 2.5rem;
             margin-right: 10px;
             overflow: hidden;
             flex-shrink: 0;
