--- a/src/pages/tickets/detail/components/ReplyArea/TicketReplyArea.less
+++ b/src/pages/tickets/detail/components/ReplyArea/TicketReplyArea.less
@@ -8,7 +8,7 @@
     min-height: 170px;
 
     &.macrosVisible {
-        height: 240px;
+        height: 271px;
     }
 
     @media @mobiles {
@@ -31,7 +31,7 @@
         input {
             height: 100%;
             border: 0;
-            padding-left: 3rem;
+            padding-left: 4.5rem;
         }
     }
 
